--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
-
-springdoc.swagger-ui.enabled=true
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.path=/swagger-ui.html
-
-#http://localhost:8080/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui-custom.html
