--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/bd_Traduce_Tec
-spring.datasource.url=jdbc:mysql://clientes_db:3307/db_springboot_backend?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/bd_Traduce_Tec
 
 spring.datasource.username=root
 spring.datasource.password=
@@ -7,7 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
-
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
 #http://localhost:8080/swagger-ui/index.html#/
